--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <figure class="hero-image-figure">
-                    <img src="assets/images/saim.png" alt="Saim - Cyber-Developer Profile" class="profile-photo">
+                    <img src="saim.png" alt="Saim - Cyber-Developer Profile" class="profile-photo">
                 </figure>
             </div>
         </section>
@@ -184,4 +184,5 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js"></script>
     </body>
+
 </html>
