--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAIM 3.0 | Advanced Cyber-Developer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="favicon" href="saim.png">
+    <link rel="icon" href="saim.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -187,4 +187,5 @@
     </body>
 
 </html>
+
 
